--- a/app/views/vagas/show.html.erb
+++ b/app/views/vagas/show.html.erb
@@ -10,10 +10,12 @@
     </div>
 
     <div class="col-10">
-     <h1><%= @vaga.titulo %></h1>
+      <h1><%= @vaga.titulo %></h1>
       <div class="row">
         <strong class="col-2">Empresa:</strong>
-        <%= @vaga.empresa.nome %>
+        <%= link_to empresa_path(@vaga.empresa.id) do %>
+          <%= @vaga.empresa.nome %>
+        <% end %>
       </div>
 
       <div class="row">
@@ -42,44 +44,44 @@
 </div>
 
 <% if current_account.is_empresa? %>
-<div class="card p-3 mb-3">
-<h5>Adicionar Habilidades</h5>
-   
-      <%= form_for VagaHabilidade.new do |f| %>
-        <%= f.hidden_field :vaga_id, value: @vaga.id %>
-        <div class="form-row">
-          <div class="form-group col">
-            <%= f.label :habilidade_id %>
-            <%= f.select :habilidade_id, options_from_collection_for_select(Habilidade.all, :id, :nome), {}, class:"form-control" %>
-          </div>
+  <div class="card p-3 mb-3">
+    <h5>Adicionar Habilidades</h5>
 
-          <div class="form-group col">
-            <%= f.label :nivel %>
-            <%= f.select :nivel, options_for_select([:basico, :intermediario, :avancado]), {}, class:"form-control" %>
-          </div>
-
-          <div class="form-group col">
-             <label class="d-block">-</label>
-            <%= f.submit '+', class: 'btn btn-primary' %>
-          </div>
+    <%= form_for VagaHabilidade.new do |f| %>
+      <%= f.hidden_field :vaga_id, value: @vaga.id %>
+      <div class="form-row">
+        <div class="form-group col">
+          <%= f.label :habilidade_id %>
+          <%= f.select :habilidade_id, options_from_collection_for_select(Habilidade.all, :id, :nome), {}, class:"form-control" %>
         </div>
-      <% end %>
+
+        <div class="form-group col">
+          <%= f.label :nivel %>
+          <%= f.select :nivel, options_for_select([:basico, :intermediario, :avancado]), {}, class:"form-control" %>
+        </div>
+
+        <div class="form-group col">
+          <label class="d-block">-</label>
+          <%= f.submit '+', class: 'btn btn-primary' %>
+        </div>
+      </div>
+    <% end %>
 
   </div>
 <% end %>
 
 <div class="card p-3 mb-3">
-<% if current_account.is_empresa? %>
-  <div class="row">
-    <%= link_to 'Editar', edit_vaga_path(@vaga), class: 'btn btn-primary col-1 ml-3' %>
-    <%= link_to 'Voltar', vagas_path, class: 'btn btn-secondary col-1 ml-3' %>
-  </div>
-<% end %>
-<% if current_account.is_aluno? %>
-     <%= form_for AlunoVaga.new do |f| %>
-       <%= f.hidden_field :aluno_id, value: current_account.perfil.papel.id %>
-       <%= f.hidden_field :vaga_id, value: @vaga.id %>
-          <%= f.submit 'Inscrever-se', class: 'btn btn-primary' %>
-     <% end %>
-<% end %>
+  <% if current_account.is_empresa? %>
+    <div class="row">
+      <%= link_to 'Editar', edit_vaga_path(@vaga), class: 'btn btn-primary col-1 ml-3' %>
+      <%= link_to 'Voltar', vagas_path, class: 'btn btn-secondary col-1 ml-3' %>
+    </div>
+  <% end %>
+  <% if current_account.is_aluno? %>
+    <%= form_for AlunoVaga.new do |f| %>
+      <%= f.hidden_field :aluno_id, value: current_account.perfil.papel.id %>
+      <%= f.hidden_field :vaga_id, value: @vaga.id %>
+      <%= f.submit 'Inscrever-se', class: 'btn btn-primary' %>
+    <% end %>
+  <% end %>
 </div>
