--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,32 @@
-<footer class="w-100">
-    <%= image_tag("UFF-IC-logos.png", alt: "Universidade Federal Fluminense", height: '100px') %>
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 offset-md-4">
+        <div class="row">
+          <div class="col-12 text-center">
+            Breno Nogueira
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 text-center">
+            Gabriel Rodríguez
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 text-center">
+            Romulo Mourão
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <br/>
+        EzEstágio: <%= VERSAO %> <br/>
+        Modificado em: <%= File.mtime(Rails.root.join('config', 'initializers', 'version.rb'))
+            .in_time_zone('Brasilia').strftime('%d/%m/%Y - %H:%M ') %>
+      </div>
+    </div>
+  </div>
 </footer>
+
