--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,24 +11,24 @@
 
   <body>
     <%= render 'layouts/navbar' %>
-    <div class="container py-5 mt-5 px-5 rounded bg-light text-secondary">
-      <%= render 'layouts/devise_alerts' %>
+    <div class="content">
+      <div class="container py-5 mt-5 px-5 rounded bg-light text-secondary">
+        <%= render 'layouts/devise_alerts' %>
 
-      <% if account_signed_in? && current_account.is_empresa? &&
-            !current_account.perfil.validada %>
-        <div class="alert alert-warning">
-          <span>
-            Empresa não validada!</br>
-            Por isso não é possível gerenciar vagas.
-          </span>
-        </div>
-      <% end %>
+        <% if account_signed_in? && current_account.is_empresa? &&
+              !current_account.perfil.validada %>
+          <div class="alert alert-warning">
+            <span>
+              Empresa não validada!</br>
+              Por isso não é possível gerenciar vagas.
+            </span>
+          </div>
+        <% end %>
 
-      <%= yield %>
+        <%= yield %>
+      </div>
     </div>
 
-    <div class="text-center container mt-5 rounded bg-light text-secondary">
       <%= render 'layouts/footer' %>
-    </div>
   </body>
 </html>
