Alterações de view

--- a/app/views/devise/registrations/_form_aluno.html.erb
+++ b/app/views/devise/registrations/_form_aluno.html.erb
@@ -47,5 +47,5 @@
     <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control' %>
   </div>
 
-  <%= f.submit 'Cadastrar', class: 'btn btn-success' %>
+  <%= f.submit 'Cadastrar', class: 'btn btn-success col-12' %>
 <% end %>
