--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,23 +1,9 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-md-4 offset-md-4">
-        <div class="row">
           <div class="col-12 text-center">
-            Breno Nogueira
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 text-center">
-            Gabriel Rodríguez
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 text-center">
-            Romulo Mourão
-          </div>
-        </div>
-      </div>
+            Breno Nogueira | Gabriel Rodríguez | Romulo Mourão
+          </div>      
     </div>
     <div class="row">
       <div class="col-md-12 text-center">
