--- a/app/views/alunos/edit.html.erb
+++ b/app/views/alunos/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editar Empresa</h1>
+<h1>Editar Aluno</h1>
 
-<%= render 'form', empresa: @empresa %>
+<%= render 'form', aluno: @aluno %>
 
-<%= link_to 'Show', @empresa %> |
-<%= link_to 'Back', empresas_path %>
+<%= link_to 'Show', @aluno %> |
+<%= link_to 'Back', aluno_path %>
