--- a/app/views/vagas/show.html.erb
+++ b/app/views/vagas/show.html.erb
@@ -40,12 +40,9 @@
       <% end %>
     </div>
   </div>
-  <hr>
-  <div class="row">
-    <strong class="col-4">Habilidades Desejadas:</strong>
-    <% @vaga.vaga_habilidades.each do |habilidade| %>
-      <span class="badge badge-primary d-block ml-2"><%= habilidade.nome %></span>
-    <% end %>
+  
+  <div class="container mt-5">
+   <%= render "tabela_habilidades" %>
   </div>
 </div>
 
