Correções no botão de inscrição em vagas e modularização dele

--- a/app/views/vagas/_table_avaliacao.html.erb
+++ b/app/views/vagas/_table_avaliacao.html.erb
@@ -8,7 +8,7 @@
       <tr class="d-flex">
         <th scope="col" class="col-2">Empresa</th>
         <th scope="col" class="col-4">Título</th>
-        <th scope="col" class="col-2">Data Fim</th>
+        <th scope="col" class="col-2">Prazo Candidatura</th>
         <th scope="col" class="col-2">Data Resposta</th>
         <th scope="col" class="col-2">Ações</th>
       </tr>
