--- a/app/views/empresas/show.html.erb
+++ b/app/views/empresas/show.html.erb
@@ -2,9 +2,9 @@
   <div class="row">
     <div class="col-2">
       <% if @empresa.avatar.present? %>
-        <%= image_tag @empresa.avatar.medium.url %>
+        <%= image_tag @empresa.avatar.medium.url, class: 'mr-4 rounded border border-gray imagem-lista-vagas' %>
       <% else %>
-        <%= image_tag "default_company.png" %>
+        <%= image_tag "default_company.png", class: 'mr-4 rounded border border-gray imagem-lista-vagas' %>
       <% end %>
     </div>
 
