--- a/app/views/empresas/_form.html.erb
+++ b/app/views/empresas/_form.html.erb
@@ -1,32 +1,44 @@
 <%= form_with(model: empresa, local: true) do |f| %>
-  <% if empresa.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(empresa.errors.count, "error") %> prohibited this empresa from being saved:</h2>
+    <% if empresa.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(empresa.errors.count, "error") %> prohibited this empresa from being saved:</h2>
 
-      <ul>
-      <% empresa.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+          <ul>
+            <% empresa.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
+
+    <div class="form-group">
+      <%= f.label :nome %>
+      <%= f.text_field :nome, class: 'form-control' %>
     </div>
-  <% end %>
 
-  <div class="form-group">
-    <%= f.label :nome %>
-    <%= f.text_field :nome, class: 'form-control' %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :endereco %>
-    <%= f.text_field :endereco, class: 'form-control' %>
-  </div>
-
-  <div class="form-group">   
-    <div class="field">
-      <%= f.label :avatar %> <br/>
-      <%= f.file_field :avatar %>
+    <div class="form-group">
+      <%= f.label :endereco %>
+      <%= f.text_field :endereco, class: 'form-control' %>
     </div>
-  </div>
 
-  <%= f.submit 'Salvar', class: 'btn btn-success' %>
+    <div class="form-group">
+      <div class="field">
+        <%= f.label :avatar %> <br/>
+        <%= f.file_field :avatar %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-12">
+
+        <% if empresa %>
+            <%= active_link_to 'Voltar', empresa, class: 'btn btn-primary' %>
+        <% else %>
+            <%= active_link_to 'Voltar', empresas_path, class: 'btn btn-primary' %>
+        <% end %>
+
+        <%= f.submit 'Salvar', class: 'btn btn-success pull-right' %>
+      </div>
+    </div>
 <% end %>
+
