--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 // Custom bootstrap variables must be set or imported *before* bootstrap.
+@import "variables";
 @import "bootstrap";
 @import "custom";
 @import "pagination";
