--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -28,7 +28,7 @@ body {
 }
 
 .content {
-  min-height: 80vh;
+  min-height: 75vh;
 }
 /* footer */
 
@@ -59,5 +59,11 @@ footer {
     li {
       font-size: 15px;
     }
+  }
+}
+
+.card-icons {
+  a {
+    text-decoration: none;
   }
 }
