--- a/app/assets/stylesheets/pagination.scss
+++ b/app/assets/stylesheets/pagination.scss
@@ -12,9 +12,9 @@
   .digg_pagination .current {
     font-style: normal;
     font-weight: bold;
-    background: #007bff;
+    background: #2A4C6D;
     color: white;
-    border: 1px solid #007bff; }
+    border: 1px solid #2A4C6D; }
   .digg_pagination a {
     text-decoration: none;
     color: #105cb6;
@@ -23,7 +23,7 @@
       color: #000033;
       border-color: #000033; }
   .digg_pagination .page_info {
-    background: #007bff;
+    background: #2A4C6D;
     color: white;
     padding: 0.4em 0.6em;
     width: 22em;
