--- a/app/views/vagas/_tabela_habilidades.html.erb
+++ b/app/views/vagas/_tabela_habilidades.html.erb
@@ -3,7 +3,7 @@
 <hr>
 <h6>Habilidades Desejadas:</h6>
   <% @vaga.vaga_habilidades.each do |habilidade| %>
-    <span class="badge badge-primary mr-1"><%= habilidade.nome %> : <%= habilidade.nivel %> </span>
+    <span class="badge badge-pill badge-primary mr-1"><%= habilidade.nome %> : <%= habilidade.nivel %> </span>
   <% end %>
 <% end %>
 
