--- a/app/views/vagas/index.html.erb
+++ b/app/views/vagas/index.html.erb
@@ -17,7 +17,7 @@
                   <strong class="d-block text-gray-dark"><%= vaga.titulo %></strong>
                   <span class="d-block pb-2 small"><%= vaga.empresa_nome %></span>
                   <% vaga.vaga_habilidades.each do |habilidade| %>
-                      <span class="badge badge-primary mr-1"><%= habilidade.nome %></span>
+                      <span class="badge badge-pill badge-primary mr-1"><%= habilidade.nome %></span>
                   <% end %>
                 </p>
               </div>
