--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,12 +8,12 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <%= active_link_to root_path, active: :exact, class: 'nav-link' do %>
-          <%= fa_icon('home') %> Home
-        <% end %>
-      </li>
       <% if account_signed_in? %>
+        <li class="nav-item">
+          <%= active_link_to index_path, active: :exact, class: 'nav-link' do %>
+            <%= fa_icon('home') %> Home
+          <% end %>
+        </li>
         <li class="nav-item">
           <%= active_link_to instrucao_index_path, class: 'nav-link' do %>
             <%= fa_icon('info') %> Instruções
