--- a/app/views/layouts/_links_empresa.html.erb
+++ b/app/views/layouts/_links_empresa.html.erb
@@ -6,7 +6,7 @@
   <% end %>
 </li>
 <li class="nav-item">
-  <%= link_to aluno_vagas_path, class: 'nav-link' do %>
+  <%= active_link_to aluno_vagas_path, class: 'nav-link' do %>
       <%= fa_icon('list') %> Candidaturas
   <% end %>
 </li>
