Adicionando instruções de usuários. Adicionando página sobre o sistema.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,7 +33,7 @@
   </div>
   <div class="col-4">
     <div class="card-icons">
-      <%= active_link_to instrucao_index_path do %>
+      <%= active_link_to instrucao_path do %>
           <div class="card">
             <div class="card-body text-center">
               <h1>
